// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component Page 1 active 1`] = `
<div
  class="pagination"
  data-testid="Pagination"
>
  <a
    class="link_go"
    href="/page/1"
  >
    Назад
  </a>
  <ul
    class="pagination_items"
  >
    <li
      class="pagination_item"
    >
      <a
        aria-current="page"
        class="active"
        href="/page/1"
      >
        1
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/2"
      >
        2
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/3"
      >
        3
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/4"
      >
        4
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/5"
      >
        5
      </a>
    </li>
  </ul>
  <a
    class="link_go"
    href="/page/2"
  >
    Далее
  </a>
</div>
`;

exports[`Pagination component Page 4 active 1`] = `
<div
  class="pagination"
  data-testid="Pagination"
>
  <a
    class="link_go"
    href="/page/3"
  >
    Назад
  </a>
  <ul
    class="pagination_items"
  >
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/1"
      >
        1
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <span>
        ...
      </span>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/3"
      >
        3
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        aria-current="page"
        class="active"
        href="/page/4"
      >
        4
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/5"
      >
        5
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/6"
      >
        6
      </a>
    </li>
  </ul>
  <a
    class="link_go"
    href="/page/5"
  >
    Далее
  </a>
</div>
`;

exports[`Pagination component Page 10 active 1`] = `
<div
  class="pagination"
  data-testid="Pagination"
>
  <a
    class="link_go"
    href="/page/9"
  >
    Назад
  </a>
  <ul
    class="pagination_items"
  >
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/1"
      >
        1
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <span>
        ...
      </span>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/7"
      >
        7
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/8"
      >
        8
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        class=""
        href="/page/9"
      >
        9
      </a>
    </li>
    <li
      class="pagination_item"
    >
      <a
        aria-current="page"
        class="active"
        href="/page/10"
      >
        10
      </a>
    </li>
  </ul>
  <a
    class="link_go"
    href="/page/10"
  >
    Далее
  </a>
</div>
`;
